# uv-python-base

./: .pre-commit-config.yaml  main.py  pyproject.toml
