[project]
name = "uv-python-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[dependency-groups]
lint = [
    "ruff>=0.3.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "bandit>=1.7.0",
    "docformatter>=1.7.0",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E501", # Ignore line length violations.
]

[tool.pyright]
typeCheckingMode = "off"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".git", "*.egg", "dist", "build", "__pycache__"]
addopts = "--junit-xml=test-results.xml --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["test_harness", "main"]
omit = ["tests/*"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = [
    "B404", # Import of subprocess module
]

[tool.docformatter]
recursive = true
wrap-summaries = 90
wrap-descriptions = 90
blank = true
